# plonky2_bench

./: .gitmodules  Cargo.toml  rust-toolchain
anemoi/: Cargo.toml  run.sh
anemoi/src/: main.rs
arion/: Cargo.toml  run.sh
arion/src/: main.rs
bench/: results.json
gmimc/: Cargo.toml  run.sh
gmimc/src/: main.rs
griffin/: Cargo.toml  run.sh
griffin/src/: main.rs
mimc/: Cargo.toml  run.sh
mimc/src/: main.rs
monolith/: Cargo.toml  run.sh
monolith/src/: main.rs
poseidon/: Cargo.toml  run.sh
poseidon/src/: main.rs
poseidon2/: Cargo.toml  run.sh
poseidon2/src/: main.rs
rescue_prime/: Cargo.toml
rescue_prime/src/: main.rs
src/: lib.rs
