[package]
name = "plonky2_bench_poseidon2"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
env_logger = "0.10.0"
plonky2_poseidon2 = { git = "https://github.com/mghazwi/plonky2_poseidon2.git", rev = "01d6e0784b77f6d4331bb2c67c1f2ad4892de9d9" }
plonky2 = { version = "0.2.2" }
plonky2_field = { version = "0.2.2", default-features = false }
